# FunctDesEPC

./: Construccion_Tablas_M.py  Funciones_Electricas.py  Funciones_Mecanicas.py  TablasNormaAfinia.py  extraer_info.py  pyproject.toml  test.py
Cantidades de material/: cantidades_materiales.py
Cantidades_de_material/: cantidades_materiales.py
autodocs/: doc_filler.py  doc_filler_word.py  funciones_docs.py  funciones_docs_word.py
data/: 3_phase_reenergization.csv  FLECHA MÍNIMA.XLS  reenergization.csv
outputs/: FLECHA MÁXIMA.XLS
src/functdesepc/: exportar_tablas.py  extraer_info.py  funciones_electricas.py  funciones_mecanicas.py  tablas_norma_afinia.py
