[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "functdesepc"
version = "0.1.0"
authors = [
    { name="Emmanuel Flórez" }
]
description = "Package for EPC functional design utilities."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
